feat: Cleanup Dependencies to rely on Spring Dependencies Tree - Meeds-io/MIPs#57